git-svn-id: http://svn.vdombox.ru/flextools/trunk@2676 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.01/src/VdomObjectTypeEditor.mxml
+++ b/TypeEditor/v.01/src/VdomObjectTypeEditor.mxml
@@ -76,7 +76,7 @@
 			itemClick="{mainMenuHandler(event);}" />
 
 		<mx:Label text="Choose object language to edit:" fontWeight="bold" />
-		<mx:ComboBox id="__langSelection" width="150" cornerRadius="1" dataProvider="{langsDataProvider}" change="{loadAttrProps();}" />	
+		<mx:ComboBox id="__langSelection" width="150" cornerRadius="1" dataProvider="{langsDataProvider}" change="{changeLangSelection();}" />	
 	</mx:HBox>
 	
 	<mx:TabNavigator width="100%" height="100%" >
