git-svn-id: http://svn.vdombox.ru/flextools/trunk@2686 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -104,7 +104,17 @@
 		drawLines(xmlApplicationStructure);
 
 		if (needCreatTree == true)
+		{
+			hideLenes();
 			adjustmentTree(xmlApplicationStructure);
+			saveToServer();
+			
+			var delayTimer:Timer = new Timer(1500, 1);
+			delayTimer.addEventListener(TimerEvent.TIMER, timerHandler);//		removeMassTreeElements();
+			delayTimer.start();
+			
+			return;
+		}
 		
 		curTree = massTreeElements[dataManager.currentPageId];
 		startPage = dataManager.currentApplicationInformation.Index;
