git-svn-id: http://svn.vdombox.ru/flextools/trunk@2698 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
+++ b/IDE/Vdom/vdom/components/edit/containers/ObjectsPanel.mxml
@@ -223,6 +223,8 @@ xmlns:containers="vdom.components.edit.containers.*" >
 		}
 	]]>
 </mx:Script>
-	<containers:OTree id="tree"  width="100%"/>
+
+	<containers:OTree id="tree"  width="100%"  openDuration="0"/>
+
 	
 </ClosablePanel>
