Locale change (error) Login form change (#175) some fix with wrong data in renderManager, TransformMarker
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2715 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/loginForm/LoginForm.mxml
+++ b/IDE/Vdom/vdom/components/loginForm/LoginForm.mxml
@@ -78,10 +78,12 @@
 			barColor="#ff0066"  alpha="1.0" borderColor="#0000FF">
 			<mx:Button id="submitButton" styleName="loginButtonOK"
 				label="{resourceManager.getString('LoginForm','ok_button')}"
-				click="checkData();" width="110"/>
+				click="checkData();" width="110"
+				focusEnabled="false"/>
 				<mx:Button id="quitButton" styleName="loginButtonQuit"
 				label="{resourceManager.getString('LoginForm','quit_button')}"
-				width="110" click="Application.application.close()"/>
+				width="110" click="Application.application.close()"
+				focusEnabled="false"/>
 		</mx:ControlBar>
 	</mx:Panel>
 </mx:Canvas>
