git-svn-id: http://svn.vdombox.ru/flextools/trunk@2727 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -694,6 +694,9 @@
             
             public function showDebugDetails():void
             {
+            	try
+            	{
+            		
 				if(!ContextManager.instance.templateStruct || ContextManager.instance.templateStruct.contextStack.length==0)
 					return;
             	
@@ -813,6 +816,7 @@
 				pnl_node_value.list.selectedIndex = pnl_node_value.array.length-1;
 				pnl_node_value.list.callLater(pnl_node_value.list.scrollToIndex, [pnl_node_value.array.length]);
 				
+            	} catch (e:*) {}
             }
             
             public function switchDebug(enable:Boolean=true):void
