git-svn-id: http://svn.vdombox.ru/flextools/trunk@2741 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -243,7 +243,10 @@
 	private function mouseMoveHandler(msEvt:MouseEvent):void
 	{
 		var curID:String = curTree.ID;
-
+		
+		if(!massTreeElements[curID])
+			return;
+			
 		if (main.mouseX < dX)
 			 	massTreeElements[curID].x = 0;
 			else
